🎨 Customize app branding and improve user experience
- Update profile name to 'Sales Team Member'
- Change app title to 'Sales Activity Tracker'
- Enhance info dialog with PWA and offline features
- Update PWA manifest for better mobile experience

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Sales Tracker Pro">
     
-    <title>Sales Tracker Pro - Gamified Sales Performance</title>
+    <title>Sales Activity Tracker - Team Performance Dashboard</title>
     
     <!-- LINE LIFF SDK -->
     <script src="https://static.line-scdn.net/liff/edge/2.23.0/sdk.js"></script>
@@ -665,7 +665,7 @@
                 <div class="profile-section">
                     <div class="profile-pic" id="profilePic">👤</div>
                     <div class="profile-info">
-                        <div class="profile-name" id="profileName">Sales Agent</div>
+                        <div class="profile-name" id="profileName">Sales Team Member</div>
                         <div class="profile-level">
                             <span>Level</span>
                             <span class="level-badge" id="levelBadge">Starter</span>
@@ -1149,7 +1149,7 @@
             }
 
             showInfo() {
-                alert('📊 Sales Tracker Pro v1.0\n\nFeatures:\n• Activity tracking with points\n• Daily goals and streaks\n• Team competition\n• Progress analytics\n\nBuilt for sales excellence! 🚀');
+                alert('📊 Sales Activity Tracker v1.0\n\nFeatures:\n• Activity tracking with points\n• Daily goals and streaks\n• Team competition\n• Progress analytics\n• Mobile PWA support\n• Offline functionality\n\nBuilt for sales excellence! 🚀');
             }
 
             saveActivities() {
