--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Sales Tracker Pro">
     
-    <title>Sales Activity Tracker - Team Performance Dashboard</title>
+    <title>FINNERGY Sales Tracker - ฟินเนอจี้</title>
     
     <!-- LINE LIFF SDK -->
     <script src="https://static.line-scdn.net/liff/edge/2.23.0/sdk.js"></script>
@@ -1236,7 +1236,7 @@
                         <div class="profile-level">
                             <span>Level</span>
                             <span class="level-badge" id="levelBadge">Starter</span>
-                            <span class="version-info" onclick="app.showAbout()" title="App Info">v2.2.0</span>
+                            <span class="version-info" onclick="app.showAbout()" title="App Info">v2.2.1</span>
                         </div>
                     </div>
                 </div>
@@ -1704,7 +1704,7 @@
                     <div style="background: var(--card-bg); padding: 15px; border-radius: 12px; margin-bottom: 15px;">
                         <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
                             <span style="font-weight: 600;">Version:</span>
-                            <span style="color: var(--primary); font-weight: 600;" id="appVersion">v2.2.0</span>
+                            <span style="color: var(--primary); font-weight: 600;" id="appVersion">v2.2.1</span>
                         </div>
                         <div style="display: flex; justify-content: space-between; margin-bottom: 8px;">
                             <span style="font-weight: 600;">Last Updated:</span>
@@ -1712,7 +1712,7 @@
                         </div>
                         <div style="display: flex; justify-content: space-between;">
                             <span style="font-weight: 600;">Build:</span>
-                            <span style="color: var(--text-light);" id="buildNumber">2024.12.08.004</span>
+                            <span style="color: var(--text-light);" id="buildNumber">2024.12.08.005</span>
                         </div>
                     </div>
 
