--- a/ai-service/demo/unified-demo-enhanced.html
+++ b/ai-service/demo/unified-demo-enhanced.html
@@ -900,7 +900,7 @@
 
     <script>
         // Configuration
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = window.location.port ? `http://localhost:${window.location.port}/api` : 'http://localhost:3002/api';
         
         // State
         let messageCount = 0;
