🔥 Aggressive cache busting for v3.6.7
- Auto-detect version change and force reload
- Add version query parameters to assets
- Force service worker update on load
- Skip waiting on service worker install
- Store version in localStorage for comparison

--- a/force-update.html
+++ b/force-update.html
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <div class="spinner"></div>
-        <h1>Updating to v3.6.6</h1>
+        <h1>Updating to Latest Version</h1>
         <p>Clearing cache and loading new version...</p>
         <p class="version">No more local data - Backend only!</p>
     </div>
