--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Force reload with version parameter -->
     <script>
         // Aggressive cache bypass
-        const CURRENT_VERSION = '3.7.0';
+        const CURRENT_VERSION = '3.7.1';
         const STORED_VERSION = localStorage.getItem('appVersion');
         
         if (STORED_VERSION !== CURRENT_VERSION) {
@@ -1033,7 +1033,7 @@
         <div class="toast" id="toast"></div>
         
         <!-- What's New Button -->
-        <button class="whats-new-btn" onclick="window.app.showWhatsNew()" title="What's New in v3.6.9">
+        <button class="whats-new-btn" onclick="window.app.showWhatsNew()" title="What's New in v3.7.1 - CI/CD">
             <span class="new-badge">NEW</span>
             <span>🎉</span>
         </button>
@@ -1056,7 +1056,7 @@
             // LIFF ID - Using your actual production LIFF ID
             LIFF_ID: '2007552096-wrG1aV9p', // Your production LIFF ID
             ENABLE_BACKEND_SYNC: true,
-            VERSION: '3.7.0',
+            VERSION: '3.7.1',
             LAST_UPDATE: new Date().toISOString(),
             UPDATE_CHECK_INTERVAL: 60000 // Check every minute
         };
