--- a/finnergy-tracker-v2/public/index.html
+++ b/finnergy-tracker-v2/public/index.html
@@ -248,6 +248,32 @@
             </div>
         </div>
 
+        <!-- Activity Heatmap -->
+        <div class="px-4 py-6">
+            <h2 class="text-xl font-bold mb-4">Activity Heatmap</h2>
+            <div class="glass rounded-2xl p-4">
+                <div class="mb-4">
+                    <p class="text-sm text-gray-400 mb-2">Last 90 days</p>
+                    <div id="heatmapContainer" class="overflow-x-auto">
+                        <div id="heatmapGrid" class="inline-block">
+                            <!-- Heatmap will be rendered here -->
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-between mt-4">
+                        <span class="text-xs text-gray-400">Less</span>
+                        <div class="flex space-x-1">
+                            <div class="w-3 h-3 rounded bg-gray-700"></div>
+                            <div class="w-3 h-3 rounded bg-violet-900"></div>
+                            <div class="w-3 h-3 rounded bg-violet-700"></div>
+                            <div class="w-3 h-3 rounded bg-violet-500"></div>
+                            <div class="w-3 h-3 rounded bg-violet-300"></div>
+                        </div>
+                        <span class="text-xs text-gray-400">More</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Leaderboard -->
         <div class="px-4 py-6">
             <h2 class="text-xl font-bold mb-4">Leaderboard</h2>
