--- a/finnergy-tracker-v2/public/index.html
+++ b/finnergy-tracker-v2/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finnergy Tracker Pro - Next Gen Sales Dashboard</title>
     <meta name="description" content="Modern sales activity tracker with glassmorphism design">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" type="image/png" href="/icon-192.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="icon-192.png">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -324,6 +324,6 @@
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     
     <!-- App Script -->
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
