Add cache busting to force app.js reload

--- a/finnergy-tracker-v2/public/index.html
+++ b/finnergy-tracker-v2/public/index.html
@@ -324,6 +324,6 @@
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     
     <!-- App Script -->
-    <script src="app.js"></script>
+    <script src="app.js?v=20250612"></script>
 </body>
 </html>
